// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`expect().toEqual() on objects with property indices doesn't print undefined 1`] = `
"expect(received).toEqual(expected)

  {
+   "0": 0,
+   "1": 1,
+   "10": 10,
+   "11": 11,
+   "12": 12,
+   "13": 13,
+   "14": 14,
+   "15": 15,
+   "2": 2,
+   "3": 3,
+   "4": 4,
+   "5": 5,
+   "6": 6,
+   "7": 7,
+   "8": 8,
+   "9": 9,
-   "0": 123,
-   "1": 123,
-   "10": 123,
-   "11": 123,
-   "12": 123,
-   "13": 123,
-   "14": 123,
-   "15": 123,
-   "2": 123,
-   "3": 123,
-   "4": 123,
-   "5": 123,
-   "6": 123,
-   "7": 123,
-   "8": 123,
-   "9": 123,
  }

- Expected  - 16
+ Received  + 16

      "
`;

exports[`unhandled errors between tests are reported in beforeAll 1`] = `
"
my-test.test.js:

# Unhandled error between tests
-------------------------------
1 |
2 |       import {test, beforeAll, expect, beforeEach, afterEach, afterAll, describe} from "bun:test";
3 |
4 |       beforeAll(async () => {
5 |         Bun.sleep(1).then(() => {
6 |           throw new Error('## stage beforeAll ##');
                    ^
error: ## stage beforeAll ##
      at <dir>/my-test.test.js:6:17
-------------------------------

(pass) my-test [xx ms]

 1 pass
 0 fail
 1 error
 1 expect() calls
Ran 1 tests across 1 files. [xx ms]
"
`;

exports[`unhandled errors between tests are reported in beforeEach 1`] = `
"
my-test.test.js:
1 |
2 |       import {test, beforeAll, expect, beforeEach, afterEach, afterAll, describe} from "bun:test";
3 |
4 |       beforeEach(async () => {
5 |         Bun.sleep(1).then(() => {
6 |           throw new Error('## stage beforeEach ##');
                    ^
error: ## stage beforeEach ##
      at <dir>/my-test.test.js:6:17
(fail) my-test [xx ms]

 0 pass
 1 fail
Ran 1 tests across 1 files. [xx ms]
"
`;

exports[`unhandled errors between tests are reported in afterEach 1`] = `
"
my-test.test.js:
(pass) my-test [xx ms]

# Unhandled error between tests
-------------------------------
1 |
2 |       import {test, beforeAll, expect, beforeEach, afterEach, afterAll, describe} from "bun:test";
3 |
4 |       afterEach(async () => {
5 |         Bun.sleep(1).then(() => {
6 |           throw new Error('## stage afterEach ##');
                    ^
error: ## stage afterEach ##
      at <dir>/my-test.test.js:6:17
-------------------------------


 1 pass
 0 fail
 1 error
 1 expect() calls
Ran 1 tests across 1 files. [xx ms]
"
`;

exports[`unhandled errors between tests are reported in afterAll 1`] = `
"
my-test.test.js:
(pass) my-test [xx ms]

# Unhandled error between tests
-------------------------------
1 |
2 |       import {test, beforeAll, expect, beforeEach, afterEach, afterAll, describe} from "bun:test";
3 |
4 |       afterAll(async () => {
5 |         Bun.sleep(1).then(() => {
6 |           throw new Error('## stage afterAll ##');
                    ^
error: ## stage afterAll ##
      at <dir>/my-test.test.js:6:17
-------------------------------


 1 pass
 0 fail
 1 error
 1 expect() calls
Ran 1 tests across 1 files. [xx ms]
"
`;

exports[`unhandled errors between tests are reported in describe 1`] = `
"
my-test.test.js:

# Unhandled error between tests
-------------------------------
1 |
2 |       import {test, beforeAll, expect, beforeEach, afterEach, afterAll, describe} from "bun:test";
3 |
4 |       describe(async () => {
5 |         Bun.sleep(1).then(() => {
6 |           throw new Error('## stage describe ##');
                    ^
error: ## stage describe ##
      at <dir>/my-test.test.js:6:17
      at <dir>/my-test.test.js:4:7
-------------------------------

(pass) my-test [xx ms]

 1 pass
 0 fail
 1 error
 1 expect() calls
Ran 1 tests across 1 files. [xx ms]
"
`;
